--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,215 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --haunter-background-light-color: #c0b0cd;
+  --haunter-background-normal-color: #a0879d;
+  --haunter-background-dark-color: #71616e;
+  --haunter-border-color: #433640;
+  --haunter-eye-color: white;
+  --haunter-eye-shadow-color: #c4bcc0;
+  --haunter-pupil-color: #222;
+  --haunter-mouth-light-color: #b5809a;
+  --haunter-mouth-dark-color: #855a6d;
+  --haunter-body-gradient: linear-gradient(
+    to bottom,
+    var(--haunter-background-light-color) 49%,
+    var(--haunter-background-dark-color) 49%
+  );
+  --custom-border: drop-shadow(3px 0 0 var(--haunter-border-color))
+    drop-shadow(-3px 0 0 var(--haunter-border-color))
+    drop-shadow(0 3px 0 var(--haunter-border-color))
+    drop-shadow(0 -3px 0 var(--haunter-border-color));
+  --haunter-shape: polygon(
+    3% 8%,
+    40% 20%,
+    44% 18%,
+    55% 18%,
+    60% 20%,
+    97% 8%,
+    77% 35%,
+    100% 32%,
+    79% 50%,
+    91% 50%,
+    66% 69%,
+    64% 76%,
+    68% 85%,
+    61% 82%,
+    74% 96%,
+    56% 90%,
+    46% 76%,
+    47% 85%,
+    9% 49%,
+    22% 51%,
+    1% 31%,
+    22% 35%
+  );
+  --haunter-inner-shape: polygon(
+    14% 16%,
+    40% 25%,
+    46% 22%,
+    54% 22%,
+    59% 25%,
+    85% 16%,
+    71% 39%,
+    100% 32%,
+    80% 50%,
+    91% 50%,
+    62% 67%,
+    60% 78%,
+    53% 75%,
+    55% 83%,
+    43% 71%,
+    44% 75%,
+    9% 49%,
+    22% 51%,
+    0% 30%,
+    29% 39%
+  );
+  --haunter-eye-shape: polygon(0 0, 100% 85%, 70% 100%, 20% 85%);
+  --haunter-mouth-shape: polygon(
+    0% 0%,
+    18% 6%,
+    19% 19%,
+    26% 9%,
+    37% 12%,
+    41% 20%,
+    45% 12%,
+    55% 12%,
+    59% 20%,
+    63% 12%,
+    74% 9%,
+    81% 19%,
+    82% 7%,
+    99% 0%,
+    88% 25%,
+    70% 36%,
+    64% 27%,
+    59% 36%,
+    55% 27%,
+    50% 36%,
+    45% 27%,
+    41% 37%,
+    36% 27%,
+    30% 36%,
+    11% 25%
+  );
+  --haunter-nail-shape: polygon(0 30%, 30% 0, 60% 0, 100% 30%, 50% 100%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body,
+.container {
+  height: 100vh;
+  width: 100vw;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.haunter-container {
+  width: 300px;
+  height: 300px;
+  filter: var(--custom-border);
+}
+
+.haunter {
+  width: 100%;
+  height: 100%;
+  clip-path: var(--haunter-shape);
+  background-image: var(--haunter-body-gradient);
+}
+
+.inner-shadow {
+  width: 100%;
+  height: 100%;
+  clip-path: var(--haunter-inner-shape);
+  background-color: var(--haunter-background-normal-color);
+}
+
+.face-container {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.face {
+  width: 42%;
+  height: 45%;
+}
+
+.eyes-container {
+  display: flex;
+  justify-content: space-between;
+  filter: var(--custom-border);
+}
+
+.eye {
+  width: 45px;
+  height: 40px;
+  background: var(--haunter-eye-shadow-color);
+  clip-path: var(--haunter-eye-shape);
+}
+
+.eye::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  transform: translate(0, -5px);
+  clip-path: var(--haunter-eye-shape);
+  background: var(--haunter-eye-color);
+}
+
+.eye::after {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 5px;
+  height: 9px;
+  transform: translate(24px, -22px);
+  background: var(--haunter-border-color);
+}
+
+.eye.right {
+  transform: scaleX(-1);
+}
+
+.mouth-container {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  filter: var(--custom-border);
+}
+
+.mouth{
+  width: 100%;
+  height: 100%;
+  background: var(--haunter-mouth-dark-color);
+  clip-path: var(--haunter-mouth-shape);
+  transform: translateY(5px);
+}
+
+.mouth::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 25%;
+  background: var(--haunter-mouth-light-color);
+  clip-path: polygon(0 0, 100% 0, 85% 90%, 50% 100%, 15% 90%);
+}
+
+.mouth-shadow{
+  position: absolute;
+  width: 42%;
+  height: 46%;
+  background: var(--haunter-background-dark-color);
+  clip-path: var(--haunter-mouth-shape);
+  transform: translateY(-120px);
+  Z-index: 0;
 }
