--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --haunter-pupil-color: #222;
   --haunter-mouth-light-color: #b5809a;
   --haunter-mouth-dark-color: #855a6d;
+  --haunter-shadow-color: rgba(0, 0, 0, 0.15);
   --haunter-body-gradient: linear-gradient(
     to bottom,
     var(--haunter-background-light-color) 49%,
@@ -17,6 +18,9 @@
     drop-shadow(-3px 0 0 var(--haunter-border-color))
     drop-shadow(0 3px 0 var(--haunter-border-color))
     drop-shadow(0 -3px 0 var(--haunter-border-color));
+  --custom-border-claw: drop-shadow(1px 0 0 var(--haunter-border-color))
+    drop-shadow(-1px 0 0 var(--haunter-border-color))
+    drop-shadow(0 -1px 0 var(--haunter-border-color));
   --haunter-shape: polygon(
     3% 8%,
     40% 20%,
@@ -92,6 +96,31 @@
     11% 25%
   );
   --haunter-nail-shape: polygon(0 30%, 30% 0, 60% 0, 100% 30%, 50% 100%);
+  --haunter-hand-shape: polygon(
+    15% 33%,
+    50% -10%,
+    85% 37%,
+    81% 79%,
+    58% 52%,
+    25% 75%,
+    15% 75%
+  );
+  --haunter-palm-shape: polygon(50% 50%, 100% 100%, 45% 100%, 0 50%);
+  --haunter-claw-shadow-shape: polygon(
+    23% 102%,
+    2% 59%,
+    5% 40%,
+    27% 20%,
+    31% 5%,
+    45% 4%,
+    51% 20%,
+    68% 39%,
+    73% 60%,
+    52% 101%,
+    49% 85%,
+    34% 85%,
+    29% 74%
+  );
 }
 
 html,
@@ -99,25 +128,40 @@ body,
 .container {
   height: 100vh;
   width: 100vw;
-}
-
-.container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .haunter-container {
+  display: flex;
+  justify-content: center;
+}
+
+.haunter {
   width: 300px;
   height: 300px;
   filter: var(--custom-border);
 }
 
-.haunter {
+.haunter::before {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: var(--haunter-shadow-color);
+  clip-path: var(--haunter-shape);
+  transform: translate(0, 10px);
+  animation: haunterShadowFly 2.25s infinite alternate ease-in-out;
+}
+
+.body {
   width: 100%;
   height: 100%;
   clip-path: var(--haunter-shape);
   background-image: var(--haunter-body-gradient);
+  animation: haunterFly 2.25s infinite alternate ease-in-out;
 }
 
 .inner-shadow {
@@ -187,7 +231,7 @@ body,
   filter: var(--custom-border);
 }
 
-.mouth{
+.mouth {
   width: 100%;
   height: 100%;
   background: var(--haunter-mouth-dark-color);
@@ -204,12 +248,187 @@ body,
   clip-path: polygon(0 0, 100% 0, 85% 90%, 50% 100%, 15% 90%);
 }
 
-.mouth-shadow{
+.mouth-shadow {
   position: absolute;
   width: 42%;
   height: 46%;
   background: var(--haunter-background-dark-color);
   clip-path: var(--haunter-mouth-shape);
   transform: translateY(-120px);
-  Z-index: 0;
+  z-index: 0;
+}
+
+.claw {
+  position: absolute;
+  width: 100px;
+  height: 75px;
+  animation: haunterLeftClawsFly 2s infinite alternate ease-in-out;
+  filter: var(--custom-border-claw);
+}
+
+.claw.right {
+  animation: haunterRightClawsFly 2s infinite alternate ease-in-out;
+}
+
+.claw::before {
+  position: absolute;
+  z-index: -5;
+  content: "";
+  display: block;
+  width: 90%;
+  height: 90%;
+  background: var(--haunter-shadow-color);
+  transform: translate(0, 5px) scale(1.3, 1.3);
+  clip-path: var(--haunter-claw-shadow-shape);
+}
+
+.nails {
+  width: 85%;
+  height: 60%;
+  display: flex;
+  filter: var(--custom-border);
+}
+
+.nail {
+  width: 25%;
+  background: var(--haunter-body-gradient);
+  clip-path: var(--haunter-nail-shape);
+}
+
+.nail::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: var(--haunter-background-normal-color);
+  transform: translate(0, -3px) scale(1.2, 0.7);
+  clip-path: var(--haunter-nail-shape);
+}
+
+.nail-1 {
+  transform: translate(0, 25px) rotate(-15deg);
+}
+
+.nail-2 {
+  transform: translate(0, 0);
+}
+
+.nail-3 {
+  transform: translate(0, 25px) rotate(15deg);
+}
+
+.hand-container {
+  position: absolute;
+  z-index: -1;
+  width: 85px;
+  height: 50px;
+  filter: var(--custom-border);
+}
+
+.hand {
+  width: 100%;
+  height: 100%;
+  background: var(--haunter-background-normal-color);
+  transform: translate(-10px, -35px);
+  clip-path: var(--haunter-hand-shape);
+}
+
+.palm-container {
+  position: absolute;
+  z-index: -2;
+  width: 85%;
+  height: 50px;
+  filter: var(--custom-border);
+  display: flex;
+  justify-content: center;
+}
+
+.palm {
+  width: 50%;
+  height: 100%;
+  background: var(--haunter-background-dark-color);
+  transform: translate(-10px, -35px);
+  clip-path: var(--haunter-palm-shape);
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -5;
+  background-color: var(--background-color);
+  background-image: radial-gradient(circle, #838ea2 40%, #514a6b 70%);
+  width: 100vw;
+  height: 100vh;
+}
+
+.background .polygon {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.15);
+  clip-path: polygon(25% 65%, 75% 35%, 100% 50%, 100% 100%, 30% 100%);
+}
+
+.background .triangle {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.background .triangle-1 {
+  clip-path: polygon(0 80%, 25% 100%, 0 100%);
+}
+
+.background .triangle-2 {
+  clip-path: polygon(0 100%, 40% 80%, 60% 100%);
+}
+
+.background .triangle-3 {
+  clip-path: polygon(0 100%, 100% 84%, 100% 100%);
+}
+
+.background .triangle-4 {
+  clip-path: polygon(75% 100%, 100% 25%, 100% 100%);
+}
+
+@keyframes haunterFly {
+  0% {
+    transform: translate(0, -5%);
+  }
+
+  100% {
+    transform: translate(0, 5%);
+  }
+}
+
+@keyframes haunterShadowFly {
+  0% {
+    transform: translate(0, 1%);
+  }
+
+  100% {
+    transform: translate(0, 11%);
+  }
+}
+
+@keyframes haunterLeftClawsFly {
+  0% {
+    transform: translate(-100px, 110px) rotate(-20deg);
+  }
+
+  100% {
+    transform: translate(-100px, 70px) rotate(-20deg);
+  }
+}
+
+@keyframes haunterRightClawsFly {
+  0% {
+    transform: translate(100px, 110px) rotate(20deg) scale(-1, 1);
+  }
+
+  100% {
+    transform: translate(100px, 70px) rotate(20deg) scale(-1, 1);
+  }
 }
